--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0",
     "react-media-recorder": "^1.7.2",
     "react-router-dom": "^7.12.0"
   },
